# mimesniff

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: lint.yml  ubuntu.yml  wpt-updater.yml
benchmarks/: CMakeLists.txt  wpt_bench.cpp
cmake/: import.cmake
include/: mimesniff.h
include/ada/mimesniff/: mimetype.h  parser.h  util-inl.h  util.h
scripts/: lint_and_format.py
singleheader/: CMakeLists.txt  README.md  amalgamate.py  demo.cpp
src/: CMakeLists.txt  mimesniff.cpp  parser.cpp  util.cpp
tests/: CMakeLists.txt  basic_tests.cpp  wpt_tests.cpp
tests/wpt/: CMakeLists.txt
tools/: update-wpt.sh
